--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Give execute permissions to jest
+      run: chmod +x node_modules/.bin/jest
+
     - name: Run tests
       run: npm test
+
